Closed Bug 1772840 Opened 2 years ago Closed 2 years ago

If the toolbox was zoomed other than 100% , the tooltip of the button is incorrectly positioned.

Categories

(DevTools :: General, defect)

Firefox 99
Desktop
Windows 10
defect

Tracking

(firefox-esr91 unaffected, firefox-esr102 verified, firefox101 wontfix, firefox102 wontfix, firefox103 verified)

VERIFIED FIXED
103 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- verified
firefox101 --- wontfix
firefox102 --- wontfix
firefox103 --- verified

People

(Reporter: alice0775, Assigned: emilio)

References

(Regression)

Details

(Keywords: nightly-community, regression)

Attachments

(2 files)

Attached image screenshot

Steps to reproduce:

  1. Open Browser Toolbox (Ctrl+Shift+Alt+I)
  2. Zoom (Ctrl++ or Ctrl+-)
  3. Mouse hover over toolbottun

Actual Results:
Tooltip positioned incorrectly

See attached

:emilio, since you are the author of the regressor, bug 1753836, could you take a look?
For more information, please visit auto_nag documentation.

Flags: needinfo?(emilio)
Flags: needinfo?(emilio)

If the tooltip node and the target node are in different documents, we'd
use the tooltip's CSS-to-dev-pixel scale to convert.

This is basically bug 1756323 but for XUL, I thought we wouldn't have
cross-document zoom like that but apparently I was wrong...

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by nfay@mozilla.com: https://hg.mozilla.org/mozilla-central/rev/56f71bae41a3 Fix zoom handling in nsXULTooltipListener. r=mstange
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 103 Branch

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(emilio)
Flags: needinfo?(emilio)

Please nominate this for ESR102 approval when you get a chance.

Flags: needinfo?(emilio)
Flags: qe-verify+

Comment on attachment 9279879 [details]
Bug 1772840 - Fix zoom handling in nsXULTooltipListener. r=#layout,mstange

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: Simple fix for tooltips on zoomed devtools.
  • User impact if declined: Mispositioned tooltips when devtools are zoomed.
  • Fix Landed on Version: 103
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Relatively simple fix similar to an existing fix for web content that landed a while back.
Flags: needinfo?(emilio)
Attachment #9279879 - Flags: approval-mozilla-esr102?
QA Whiteboard: [qa-triaged]

I managed to reproduce this issue on Firefox 102.0(build ID: 20220623063721) on Windows 10 64-bits. Verified as fixed on Firefox 103.0b5(build ID: 20220705185846) and Nightly 104.0a1(buildID: 20220706214039) on Windows 10 64-bits, macOS 11 and Ubuntu 22.04.

Comment on attachment 9279879 [details]
Bug 1772840 - Fix zoom handling in nsXULTooltipListener. r=#layout,mstange

Approved for 102.1esr.

Attachment #9279879 - Flags: approval-mozilla-esr102? → approval-mozilla-esr102+

Hello,
I confirm this fix is verified on Firefox 102.1.0esr(build ID: 20220707163442) on macOS 11, Windows 10 64-bits and Ubuntu 22.04

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: