Bug 1772840 - Fix zoom handling in nsXULTooltipListener. r=mstange

If the tooltip node and the target node are in different documents, we'd
use the tooltip's CSS-to-dev-pixel scale to convert.

This is basically bug 1756323 but for XUL, I thought we wouldn't have
cross-document zoom like that but apparently I was wrong...

Differential Revision: https://phabricator.services.mozilla.com/D148402